--- a/myblind.yaml
+++ b/myblind.yaml
@@ -25,23 +25,22 @@ substitutions:
   devicename: roller_blind
   upper_devicename: Roller Blind
   mystepper: my_stepper # Name of the stepper motor (leave as is)
-  speed: 600 steps/s # Set the speed of the motor
+  speed: 1000 steps/s # Set the speed of the motor
   reportin: "0" # Set if you want the blind to report position while moving (causes delay)
 
-  pina: D1 # Swap these \_ coil a
-  pinb: D3 # Swap these /
-  pinc: D2 # Swap these \_ coil b
-  pind: D4 # Swap these /
-
+  step_pin: "14" # Swap these \_ coil a
+  dir_pin: "16" # Swap these /
+  en_pin: "15" # Swap these \_ coil b
+  manual_pin: "12"
 # NOTE:  If you find that your shades are going the wrong way, you can change the pin
 #        settings or reverse the + and – wires for each of the A and B motor
 #        pairs on your driver and the motor will spin in the opposite direction.
 
 # These pinouts are for the original 'Motor on a Roller Blind'esphome:
-
 esp8266:
-  board: d1_mini
-  restore_from_flash: True
+  board: esp01_1m
+  restore_from_flash: true
+  
 esphome:
   name: $devicename
   on_boot:
@@ -79,12 +78,12 @@ esphome:
                 current_operation: IDLE
 
 wifi:
-  networks: 
-    - ssid: !secret wifi
-      password: !secret wifi_password
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
+
   ap:
     ssid: $upper_devicename
-    password: !secret wifi_password
+    password: "CwIcBf0KyzWN"
 
 web_server:
   port: 80
@@ -93,24 +92,25 @@ logger:
 
 api:
   encryption:
-    key: !secret enc_key
+    key: "fdissEsAd6MzbRGIeVYJIlTm7y5rOvV+4JgoHMGcEWY="
 
 ota:
-  password: !secret ota_password
+  password: "f47ca81c700588f4c1cd044f99a6c336"
 
 captive_portal:
 
 stepper:
-  - platform: uln2003
+  - platform: a4988
     id: $mystepper
-    pin_a: $pina
-    pin_b: $pinb
-    pin_c: $pinc
-    pin_d: $pind
-    max_speed: ${speed} # Speed of the motor
-    sleep_when_done: True
+    step_pin: $step_pin
+    dir_pin:
+      number: $dir_pin
+      inverted: true
+    max_speed: ${speed}
+    # Optional:
     acceleration: inf
-    deceleration: inf
+    deceleration: inf  
+    sleep_when_done: false  
 
 globals:
   - id: ${mystepper}_global # Integer for storing the stepper position in case of reboot
@@ -165,7 +165,7 @@ text_sensor:
 binary_sensor:
   - platform: gpio
     pin:
-      number: D7 # Connect Button to D7 and GND
+      number: $manual_pin # Connect Button to D7 and GND
       mode: INPUT_PULLUP
       inverted: True
     name: Button
