--- a/myblind.yaml
+++ b/myblind.yaml
@@ -24,14 +24,23 @@
 substitutions:
   devicename: roller_blind
   upper_devicename: Roller Blind
-  mystepper: my_stepper # Name of the stepper motor (leave as is)
-  speed: 1000 steps/s # Set the speed of the motor
-  reportin: "0" # Set if you want the blind to report position while moving (causes delay)
 
-  step_pin: "14" # Swap these \_ coil a
-  dir_pin: "16" # Swap these /
-  en_pin: "15" # Swap these \_ coil b
-  manual_pin: "12"
+  mystepper: my_stepper
+  reportin: "0"
+  step_pin: "14"
+  dir_pin: "16"
+  manual_pin: "12" 
+
+  mystepper2: my_stepper2 # Name of the stepper motor (leave as is)
+  reportin2: "0" # Set if you want the blind to report position while moving (causes delay)
+  step_pin2: "4"
+  dir_pin2: "5"
+  manual_pin2: "12"
+
+  speed: 1000 steps/s # Set the speed of the motor
+
+  en_pin: "15"
+
 # NOTE:  If you find that your shades are going the wrong way, you can change the pin
 #        settings or reverse the + and – wires for each of the A and B motor
 #        pairs on your driver and the motor will spin in the opposite direction.
@@ -52,6 +61,12 @@ esphome:
       - stepper.set_target: # Set stepper to global variable
           id: $mystepper
           target: !lambda return id(${mystepper}_global);
+      - stepper.report_position: # Set stepper to global variable
+          id: $mystepper
+          position: !lambda return id(${mystepper2}_global);
+      - stepper.set_target: # Set stepper to global variable
+          id: $mystepper
+          target: !lambda return id(${mystepper2}_global);          
       - if: # If blind is Closed
           condition:
             - lambda: 'return id(${mystepper}_global) == 0;'
@@ -60,6 +75,14 @@ esphome:
                 id: blinded
                 state: CLOSED
                 current_operation: IDLE
+      - if: # If blind is Closed
+          condition:
+            - lambda: 'return id(${mystepper2}_global) == 0;'
+          then: # Publish state etc.
+            - cover.template.publish:
+                id: blinded2
+                state: CLOSED
+                current_operation: IDLE                
       - if: # If blind is Open
           condition:
             - lambda: 'return id(${mystepper}_global) == id(endstop);'
@@ -68,6 +91,14 @@ esphome:
                 id: blinded
                 state: OPEN
                 current_operation: IDLE
+      - if: # If blind is Open
+          condition:
+            - lambda: 'return id(${mystepper2}_global) == id(endstop2);'
+          then: # Publish state etc.
+            - cover.template.publish:
+                id: blinded2
+                state: OPEN
+                current_operation: IDLE                
       - if: # If blind is Neither
           condition:
             - lambda: 'return (id(${mystepper}_global) != 0) && (id(${mystepper}_global) != id(endstop));'
@@ -76,7 +107,14 @@ esphome:
                 id: blinded
                 position: !lambda 'return (float(float(id($mystepper).current_position) / float(id(endstop))));' 
                 current_operation: IDLE
-
+      - if: # If blind is Neither
+          condition:
+            - lambda: 'return (id(${mystepper2}_global) != 0) && (id(${mystepper2}_global) != id(endstop2));'
+          then: #  # Publish state etc.
+            - cover.template.publish:
+                id: blinded2
+                position: !lambda 'return (float(float(id($mystepper2).current_position) / float(id(endstop2))));' 
+                current_operation: IDLE
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
@@ -111,6 +149,17 @@ stepper:
     acceleration: inf
     deceleration: inf  
 
+  - platform: a4988
+    id: $mystepper2
+    step_pin: $step_pin2
+    dir_pin:
+      number: $dir_pin2
+      inverted: true
+    max_speed: ${speed}
+    # Optional:
+    acceleration: inf
+    deceleration: inf  
+
 globals:
   - id: ${mystepper}_global # Integer for storing the stepper position in case of reboot
     type: int
@@ -136,6 +185,31 @@ globals:
     type: bool
     restore_value: no
     initial_value: '${reportin}'
+
+  - id: ${mystepper2}_global # Integer for storing the stepper position in case of reboot
+    type: int
+    restore_value: True
+    initial_value: '0'
+
+  - id: openclosed2 # Boolean to store OPEN/CLOSED state
+    type: bool
+    restore_value: True
+    initial_value: '0'
+
+  - id: endstop2 # Variable for storing ENDSTOP (how far to move stepper)
+    type: int
+    restore_value: True
+    initial_value: '1000'
+
+  - id: settingmode2 # Integer for Setup Mode
+    type: int
+    restore_value: no
+    initial_value: '0'
+
+  - id: reportin2 # Boolean for reporting the position of blind when moving (See testblind.yaml)
+    type: bool
+    restore_value: no
+    initial_value: '${reportin2}'
 
 text_sensor:
   - platform: version
@@ -167,7 +241,7 @@ binary_sensor:
       number: $manual_pin # Connect Button to D7 and GND
       mode: INPUT_PULLUP
       inverted: True
-    name: Button
+    name: Button 1
     internal: True
     on_click:
     - min_length: 50ms
@@ -176,6 +250,38 @@ binary_sensor:
         - if: # If settings variable is on
             condition:
               - lambda: 'return id(settingmode) != 0;'
+            then: # Enter Setting Mode
+              - script.execute: setupbutton
+            else:
+              - if: # If blind is closed
+                  condition:
+                    - lambda: 'return id(openclosed) == 0;'
+                  then: # Open blind
+                    - cover.open: blinded
+                  else: # Close blind
+                    - cover.close: blinded
+    - min_length: 1000ms
+      max_length: 3000ms
+      then: # Long press to Enter Setting Mode
+        - logger.log: "Entered Settings Mode"
+        - globals.set:
+            id: settingmode
+            value:  '1'
+
+  - platform: gpio
+    pin:
+      number: $manual_pin2 # Connect Button to D7 and GND
+      mode: INPUT_PULLUP
+      inverted: True
+    name: Button 2
+    internal: True
+    on_click:
+    - min_length: 50ms
+      max_length: 500ms
+      then: # Short press to OPEN/CLOSE blinds and also for setting up
+        - if: # If settings variable is on
+            condition:
+              - lambda: 'return id(settingmode2) != 0;'
             then: # Enter Setting Mode
               - script.execute: setupbutton
             else:
@@ -244,6 +350,28 @@ switch:
         - logger.log: "Exiting Settings Mode"
         - globals.set:
             id: settingmode
+            value:  '0'
+
+  - platform: template
+    name: ${upper_devicename} Setup Switch 2 # Switch to enter Setup Mode
+    id: setupswitch2
+    lambda: |-
+      if (id(settingmode2) != 0) {
+        return true;
+      } else {
+        return false;
+      }
+    turn_on_action:
+      then:
+        - logger.log: "Entered Settings Mode"
+        - globals.set:
+            id: settingmode2
+            value:  '1'
+    turn_off_action:
+      then:
+        - logger.log: "Exiting Settings Mode"
+        - globals.set:
+            id: settingmode2
             value:  '0'
 
 button:
@@ -374,6 +502,126 @@ cover:
         - cover.template.publish:
             id: blinded
             position: !lambda 'return (float(float(id($mystepper).current_position) / float(id(endstop))));' 
+            current_operation: IDLE
+    has_position: true
+    device_class: blind
+
+  - platform: template
+    name: $upper_devicename
+    id: blinded
+    open_action:
+      then:
+        - logger.log: "Opening"
+        - logger.log:
+            format: "Endstop is: %d"
+            args: [ 'id(endstop2)' ]
+        - stepper.set_target: # Send stepper to endstop
+            id: $mystepper2
+            target: !lambda return id(endstop2);
+        - if:
+            condition: 
+              lambda: 'return id(reportin2) == 1;' # If Reporting is Selected
+            then:
+              - while:
+                  condition:
+                    lambda: 'return id($mystepper2).current_position != id(endstop2);'
+                  then:
+                    - cover.template.publish:
+                        id: blinded
+                        position: !lambda 'return (float(float(id($mystepper2).current_position) / float(id(endstop2))));' 
+                        current_operation: OPENING
+                    - delay: 1000 ms
+            else:
+              - cover.template.publish:
+                  id: blinded
+                  position: !lambda 'return (float(float(id($mystepper2).current_position) / float(id(endstop2))));' 
+                  current_operation: OPENING
+              - wait_until: # Wait until endstop reached
+                  lambda: 'return (id($mystepper2).current_position == id(endstop2));'
+        - globals.set: # Set global to current position
+            id: ${mystepper2}_global
+            value: !lambda return id($mystepper2).current_position; 
+        - globals.set: # Set toggle to OPEN (No need for 'optimistic mode')
+            id: openclosed2
+            value: '1'
+        - cover.template.publish:
+            id: blinded
+            state: OPEN 
+            current_operation: IDLE
+    close_action:
+      then:
+        - logger.log: "Closing"
+        - stepper.set_target: # Send stepper to 0
+            id: $mystepper2
+            target: '0'
+        - if:
+            condition: 
+              lambda: 'return id(reportin2) == 1;'
+            then:
+              - while:
+                  condition:
+                    lambda: 'return id($mystepper2).current_position != 0;'
+                  then:
+                    - cover.template.publish:
+                        id: blinded
+                        position: !lambda 'return (float(float(id($mystepper2).current_position) / float(id(endstop2))));' 
+                        current_operation: CLOSING
+                    - delay: 1000 ms
+            else:
+              - cover.template.publish:
+                  id: blinded
+                  position: !lambda 'return (float(float(id($mystepper2).current_position) / float(id(endstop2))));' 
+                  current_operation: CLOSING
+              - wait_until: # Wait until endstop reached
+                  lambda: 'return id($mystepper2).current_position == 0;'
+        - globals.set: # Set global to current position
+            id: ${mystepper2}_global
+            value: !lambda return id($mystepper2).current_position; 
+        - globals.set: # Set toggle to CLOSED (No need for 'optimistic mode')
+            id: openclosed2
+            value: '0'
+        - cover.template.publish:
+            id: blinded
+            state: CLOSED
+            current_operation: IDLE
+    position_action:
+      then:
+        - stepper.set_target:
+            id: $mystepper2
+            target: !lambda return int(id(endstop2) * pos);
+        - if:
+            condition: 
+              lambda: 'return id(reportin2) == 1;'
+            then:
+              - while:
+                  condition:
+                    lambda: 'return id($mystepper2).current_position != int(id(endstop2) * pos);'
+                  then:
+                    - cover.template.publish:
+                        id: blinded
+                        position: !lambda 'return (float(float(id($mystepper2).current_position) / float(id(endstop2))));' 
+                    - delay: 1000 ms
+            else:
+              - wait_until: # Wait until endstop reached
+                  lambda: 'return id($mystepper2).current_position == (int(id(endstop2) * pos));'
+        - globals.set: # Set global to current position
+            id: ${mystepper2}_global
+            value: !lambda return id($mystepper2).current_position; 
+        - cover.template.publish:
+            id: blinded
+            position: !lambda 'return (float(float(id($mystepper2).current_position) / float(id(endstop2))));' 
+            current_operation: IDLE
+    stop_action:
+      then:
+        - stepper.set_target:
+            id: $mystepper2
+            target: !lambda return id($mystepper2).current_position;
+        - globals.set: # Set global to current position
+            id: ${mystepper2}_global
+            value: !lambda return id($mystepper2).current_position;
+        - cover.template.publish:
+            id: blinded
+            position: !lambda 'return (float(float(id($mystepper2).current_position) / float(id(endstop2))));' 
             current_operation: IDLE
     has_position: true
     device_class: blind
